--- a/Simple Rest API/docker-compose.yml
+++ b/Simple Rest API/docker-compose.yml
@@ -3,4 +3,11 @@ services:
   web:
     build: ./web
     ports:
-      - "5000:5000"
+      - ${PORT:-5000}:5000
+    command:
+      - flask
+      - run
+      - --host=0.0.0.0
+    environment:
+      FLASK_DEBUG: '1'
+      FLASK_APP: app
